@@ -1,3 +1,10 @@
+Thu Aug 13 11:51:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.cpp:
+          Added some commented out test code to test the reader code.
+          This uncovered an issue with the spec, what should the reader
+          do when there is no data
+
 Thu Aug 13 10:31:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tools/Config_Handlers/XSCRT/Elements.hpp:
